// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast API render toast at bottom-center position 1`] = `
<DocumentFragment>
  <button
    data-testid="action"
    type="button"
  >
    action
  </button>
  @keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(0, 100%, 0) scale(0.1);
    -moz-transform: translate3d(0, 100%, 0) scale(0.1);
    -ms-transform: translate3d(0, 100%, 0) scale(0.1);
    transform: translate3d(0, 100%, 0) scale(0.1);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(0, 100%, 0) scale(0.1);
    -moz-transform: translate3d(0, 100%, 0) scale(0.1);
    -ms-transform: translate3d(0, 100%, 0) scale(0.1);
    transform: translate3d(0, 100%, 0) scale(0.1);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }
}

@keyframes animation-1 {
  0% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }

  100% {
    -webkit-transform: translate3d(0,100%,0) scale(0.1);
    -moz-transform: translate3d(0,100%,0) scale(0.1);
    -ms-transform: translate3d(0,100%,0) scale(0.1);
    transform: translate3d(0,100%,0) scale(0.1);
    opacity: 0;
  }
}

@keyframes animation-1 {
  0% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }

  100% {
    -webkit-transform: translate3d(0,100%,0) scale(0.1);
    -moz-transform: translate3d(0,100%,0) scale(0.1);
    -ms-transform: translate3d(0,100%,0) scale(0.1);
    transform: translate3d(0,100%,0) scale(0.1);
    opacity: 0;
  }
}

.emotion-0 {
  position: fixed;
  pointer-events: none;
  left: 10px;
  right: 10px;
  bottom: 20px;
}

.emotion-1 {
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  bottom: 0;
  transition-property: top,bottom;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(.5, 0, .5, 1);
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-timing-function: cubic-bezier(.5, 0, .5, 1);
  animation-timing-function: cubic-bezier(.5, 0, .5, 1);
}

.emotion-1>* {
  pointer-events: initial;
}

.emotion-2 {
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  bottom: 0;
  transition-property: top,bottom;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-name: animation-1;
  animation-name: animation-1;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(.5, 0, .5, 1);
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-timing-function: cubic-bezier(.5, 0, .5, 1);
  animation-timing-function: cubic-bezier(.5, 0, .5, 1);
}

.emotion-2>* {
  pointer-events: none;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast API render toast at bottom-left position 1`] = `
<DocumentFragment>
  <button
    data-testid="action"
    type="button"
  >
    action
  </button>
  @keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(0, 100%, 0) scale(0.1);
    -moz-transform: translate3d(0, 100%, 0) scale(0.1);
    -ms-transform: translate3d(0, 100%, 0) scale(0.1);
    transform: translate3d(0, 100%, 0) scale(0.1);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(0, 100%, 0) scale(0.1);
    -moz-transform: translate3d(0, 100%, 0) scale(0.1);
    -ms-transform: translate3d(0, 100%, 0) scale(0.1);
    transform: translate3d(0, 100%, 0) scale(0.1);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(0, 100%, 0) scale(0.1);
    -moz-transform: translate3d(0, 100%, 0) scale(0.1);
    -ms-transform: translate3d(0, 100%, 0) scale(0.1);
    transform: translate3d(0, 100%, 0) scale(0.1);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }
}

@keyframes animation-1 {
  0% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }

  100% {
    -webkit-transform: translate3d(0,100%,0) scale(0.1);
    -moz-transform: translate3d(0,100%,0) scale(0.1);
    -ms-transform: translate3d(0,100%,0) scale(0.1);
    transform: translate3d(0,100%,0) scale(0.1);
    opacity: 0;
  }
}

@keyframes animation-1 {
  0% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }

  100% {
    -webkit-transform: translate3d(0,100%,0) scale(0.1);
    -moz-transform: translate3d(0,100%,0) scale(0.1);
    -ms-transform: translate3d(0,100%,0) scale(0.1);
    transform: translate3d(0,100%,0) scale(0.1);
    opacity: 0;
  }
}

@keyframes animation-1 {
  0% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }

  100% {
    -webkit-transform: translate3d(0,100%,0) scale(0.1);
    -moz-transform: translate3d(0,100%,0) scale(0.1);
    -ms-transform: translate3d(0,100%,0) scale(0.1);
    transform: translate3d(0,100%,0) scale(0.1);
    opacity: 0;
  }
}

.emotion-0 {
  position: fixed;
  pointer-events: none;
  left: 10px;
  right: 10px;
  bottom: 20px;
}

.emotion-1 {
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 8px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  bottom: 0;
  transition-property: top,bottom;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(.5, 0, .5, 1);
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-timing-function: cubic-bezier(.5, 0, .5, 1);
  animation-timing-function: cubic-bezier(.5, 0, .5, 1);
}

.emotion-1>* {
  pointer-events: initial;
}

.emotion-2 {
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 8px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  bottom: 0;
  transition-property: top,bottom;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-name: animation-1;
  animation-name: animation-1;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(.5, 0, .5, 1);
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-timing-function: cubic-bezier(.5, 0, .5, 1);
  animation-timing-function: cubic-bezier(.5, 0, .5, 1);
}

.emotion-2>* {
  pointer-events: none;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast API render toast at bottom-right position 1`] = `
<DocumentFragment>
  <button
    data-testid="action"
    type="button"
  >
    action
  </button>
  @keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(0, 100%, 0) scale(0.1);
    -moz-transform: translate3d(0, 100%, 0) scale(0.1);
    -ms-transform: translate3d(0, 100%, 0) scale(0.1);
    transform: translate3d(0, 100%, 0) scale(0.1);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }
}

@keyframes animation-1 {
  0% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }

  100% {
    -webkit-transform: translate3d(0,100%,0) scale(0.1);
    -moz-transform: translate3d(0,100%,0) scale(0.1);
    -ms-transform: translate3d(0,100%,0) scale(0.1);
    transform: translate3d(0,100%,0) scale(0.1);
    opacity: 0;
  }
}

.emotion-0 {
  position: fixed;
  pointer-events: none;
  left: 10px;
  right: 10px;
  bottom: 20px;
}

.emotion-1 {
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 8px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  bottom: 0;
  transition-property: top,bottom;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(.5, 0, .5, 1);
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-timing-function: cubic-bezier(.5, 0, .5, 1);
  animation-timing-function: cubic-bezier(.5, 0, .5, 1);
}

.emotion-1>* {
  pointer-events: initial;
}

.emotion-2 {
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 8px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  bottom: 0;
  transition-property: top,bottom;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-name: animation-1;
  animation-name: animation-1;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(.5, 0, .5, 1);
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-timing-function: cubic-bezier(.5, 0, .5, 1);
  animation-timing-function: cubic-bezier(.5, 0, .5, 1);
}

.emotion-2>* {
  pointer-events: none;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="bottom: 0px;"
    >
      <div>
        message
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast API render toast at top-center position 1`] = `
<DocumentFragment>
  <button
    data-testid="action"
    type="button"
  >
    action
  </button>
  @keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(0, -100%, 0) scale(0.1);
    -moz-transform: translate3d(0, -100%, 0) scale(0.1);
    -ms-transform: translate3d(0, -100%, 0) scale(0.1);
    transform: translate3d(0, -100%, 0) scale(0.1);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(0, -100%, 0) scale(0.1);
    -moz-transform: translate3d(0, -100%, 0) scale(0.1);
    -ms-transform: translate3d(0, -100%, 0) scale(0.1);
    transform: translate3d(0, -100%, 0) scale(0.1);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }
}

@keyframes animation-1 {
  0% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }

  100% {
    -webkit-transform: translate3d(0,-100%,0) scale(0.1);
    -moz-transform: translate3d(0,-100%,0) scale(0.1);
    -ms-transform: translate3d(0,-100%,0) scale(0.1);
    transform: translate3d(0,-100%,0) scale(0.1);
    opacity: 0;
  }
}

.emotion-0 {
  position: fixed;
  pointer-events: none;
  left: 10px;
  right: 10px;
  top: 20px;
}

.emotion-1 {
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 0;
  transition-property: top,bottom;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(.5, 0, .5, 1);
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-timing-function: cubic-bezier(.5, 0, .5, 1);
  animation-timing-function: cubic-bezier(.5, 0, .5, 1);
}

.emotion-1>* {
  pointer-events: initial;
}

.emotion-2 {
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 0;
  transition-property: top,bottom;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-name: animation-1;
  animation-name: animation-1;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(.5, 0, .5, 1);
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-timing-function: cubic-bezier(.5, 0, .5, 1);
  animation-timing-function: cubic-bezier(.5, 0, .5, 1);
}

.emotion-2>* {
  pointer-events: none;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      style="top: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="top: 0px;"
    >
      <div>
        message
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast API render toast at top-left position 1`] = `
<DocumentFragment>
  <button
    data-testid="action"
    type="button"
  >
    action
  </button>
  @keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(0, -100%, 0) scale(0.1);
    -moz-transform: translate3d(0, -100%, 0) scale(0.1);
    -ms-transform: translate3d(0, -100%, 0) scale(0.1);
    transform: translate3d(0, -100%, 0) scale(0.1);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(0, -100%, 0) scale(0.1);
    -moz-transform: translate3d(0, -100%, 0) scale(0.1);
    -ms-transform: translate3d(0, -100%, 0) scale(0.1);
    transform: translate3d(0, -100%, 0) scale(0.1);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(0, -100%, 0) scale(0.1);
    -moz-transform: translate3d(0, -100%, 0) scale(0.1);
    -ms-transform: translate3d(0, -100%, 0) scale(0.1);
    transform: translate3d(0, -100%, 0) scale(0.1);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }
}

@keyframes animation-1 {
  0% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }

  100% {
    -webkit-transform: translate3d(0,-100%,0) scale(0.1);
    -moz-transform: translate3d(0,-100%,0) scale(0.1);
    -ms-transform: translate3d(0,-100%,0) scale(0.1);
    transform: translate3d(0,-100%,0) scale(0.1);
    opacity: 0;
  }
}

@keyframes animation-1 {
  0% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }

  100% {
    -webkit-transform: translate3d(0,-100%,0) scale(0.1);
    -moz-transform: translate3d(0,-100%,0) scale(0.1);
    -ms-transform: translate3d(0,-100%,0) scale(0.1);
    transform: translate3d(0,-100%,0) scale(0.1);
    opacity: 0;
  }
}

.emotion-0 {
  position: fixed;
  pointer-events: none;
  left: 10px;
  right: 10px;
  top: 20px;
}

.emotion-1 {
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 8px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  top: 0;
  transition-property: top,bottom;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(.5, 0, .5, 1);
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-timing-function: cubic-bezier(.5, 0, .5, 1);
  animation-timing-function: cubic-bezier(.5, 0, .5, 1);
}

.emotion-1>* {
  pointer-events: initial;
}

.emotion-2 {
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 8px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  top: 0;
  transition-property: top,bottom;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-name: animation-1;
  animation-name: animation-1;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(.5, 0, .5, 1);
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-timing-function: cubic-bezier(.5, 0, .5, 1);
  animation-timing-function: cubic-bezier(.5, 0, .5, 1);
}

.emotion-2>* {
  pointer-events: none;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      style="top: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="top: 0px;"
    >
      <div>
        message
      </div>
    </div>
    <div
      class="emotion-2"
      style="top: 0px;"
    >
      <div>
        message
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast API render toast at top-right position 1`] = `
<DocumentFragment>
  <button
    data-testid="action"
    type="button"
  >
    action
  </button>
  @keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(0, -100%, 0) scale(0.1);
    -moz-transform: translate3d(0, -100%, 0) scale(0.1);
    -ms-transform: translate3d(0, -100%, 0) scale(0.1);
    transform: translate3d(0, -100%, 0) scale(0.1);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    -moz-transform: translate3d(0, 0, 0) scale(1);
    -ms-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    opacity: 1;
  }
}

.emotion-0 {
  position: fixed;
  pointer-events: none;
  left: 10px;
  right: 10px;
  top: 20px;
}

.emotion-1 {
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 8px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  top: 0;
  transition-property: top,bottom;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(.5, 0, .5, 1);
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-timing-function: cubic-bezier(.5, 0, .5, 1);
  animation-timing-function: cubic-bezier(.5, 0, .5, 1);
}

.emotion-1>* {
  pointer-events: initial;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      style="top: 0px;"
    >
      <div>
        message
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast Component renders with actions 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #2E3F54;
  border-radius: 8px;
  padding: 12px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    max-width: 90%;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    max-width: 60%;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    max-width: 45%;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    max-width: 38%;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    max-width: 31%;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-right: 12px;
}

.emotion-3 {
  margin: 0;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  color: #FFFFFF;
}

.emotion-3::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-3::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-3 svg {
  fill: #FFFFFF;
}

.emotion-4 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin-right: 12px;
}

.emotion-5 {
  border-style: solid;
  border-color: rgba(255,255,255,0.5);
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

.emotion-6 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-7 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  min-width: 64px;
  padding: 8px 12px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  margin: 0;
  cursor: pointer;
}

.emotion-7 svg {
  width: 16px;
  height: 16px;
}

.emotion-7 svg {
  fill: #FFFFFF;
}

.emotion-7:hover:not(:disabled) {
  background-color: #254CAC;
}

.emotion-7:active:not(:disabled) {
  background-color: #14328D;
}

.emotion-7:disabled {
  background-color: #DEE2E5;
  color: #C0C7CC;
}

.emotion-7:disabled svg {
  fill: #C0C7CC;
}

.emotion-7:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-7:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-7 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-7 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-10 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 18px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-10::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-10::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<div
    class="emotion-0"
    data-testid="toast-container"
  >
    <div
      class="emotion-1"
    >
      <div
        aria-live="polite"
        class="emotion-2"
        role="status"
      >
        <p
          class="emotion-3"
        >
          toast message
        </p>
      </div>
    </div>
    <div
      class="emotion-4"
    >
      <hr
        aria-hidden="true"
        class="emotion-5"
        data-testid="divider"
      />
    </div>
    <div
      class="emotion-6"
    >
      <button
        class="emotion-7"
        data-testid="button"
        type="button"
      >
        <div
          class="emotion-8"
        >
          <div
            class="emotion-9"
          >
            <span
              class="emotion-10"
            >
              undo
            </span>
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast Component renders with content as react element 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #2E3F54;
  border-radius: 8px;
  padding: 12px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    max-width: 90%;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    max-width: 60%;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    max-width: 45%;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    max-width: 38%;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    max-width: 31%;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-3 {
  margin: 0;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  color: #FFFFFF;
}

.emotion-3::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-3::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-3 svg {
  fill: #FFFFFF;
}

.emotion-4 {
  margin: 0;
}

<div
    class="emotion-0"
    data-testid="toast-container"
  >
    <div
      class="emotion-1"
    >
      <div
        aria-live="polite"
        class="emotion-2"
        role="status"
      >
        <div
          class="emotion-3"
        >
          <p
            class="emotion-4"
          >
            toast message
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast Component renders with content as string and link 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #2E3F54;
  border-radius: 8px;
  padding: 12px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    max-width: 90%;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    max-width: 60%;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    max-width: 45%;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    max-width: 38%;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    max-width: 31%;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-3 {
  margin: 0;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  color: #FFFFFF;
}

.emotion-3::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-3::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-3 svg {
  fill: #FFFFFF;
}

.emotion-4 {
  display: inline-block;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-4 {
    transition-property: color,fill;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-4 {
    transition-property: color,fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-4 svg {
  fill: #3358CC;
}

.emotion-4:hover:not(:disabled) {
  color: #254CAC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:hover:not(:disabled) svg {
  fill: #254CAC;
}

.emotion-4:active:not(:disabled) {
  color: #14328D;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:active:not(:disabled) svg {
  fill: #14328D;
}

.emotion-4:visited:not(:disabled) {
  color: #6454E3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:visited:not(:disabled) svg {
  fill: #6454E3;
}

.emotion-4:visited:hover:not(:disabled) {
  color: #6454E3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:visited:hover:not(:disabled) svg {
  fill: #6454E3;
}

.emotion-4:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-4:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-6 {
  margin: 0;
  display: block;
}

<div
    class="emotion-0"
    data-testid="toast-container"
  >
    <div
      class="emotion-1"
    >
      <div
        aria-live="polite"
        class="emotion-2"
        role="status"
      >
        <p
          class="emotion-3"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
          <a
            class="emotion-4"
            href="/"
          >
            <span
              class="emotion-5"
            >
              <span
                class="emotion-6"
              >
                NewsKit Link
              </span>
            </span>
          </a>
          ut labore et dolore magna aliqua.
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast Component renders with default props 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #2E3F54;
  border-radius: 8px;
  padding: 12px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    max-width: 90%;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    max-width: 60%;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    max-width: 45%;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    max-width: 38%;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    max-width: 31%;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-3 {
  margin: 0;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  color: #FFFFFF;
}

.emotion-3::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-3::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-3 svg {
  fill: #FFFFFF;
}

<div
    class="emotion-0"
    data-testid="toast-container"
  >
    <div
      class="emotion-1"
    >
      <div
        aria-live="polite"
        class="emotion-2"
        role="status"
      >
        <p
          class="emotion-3"
        >
          toast message
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast Component renders with icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #2E3F54;
  border-radius: 8px;
  padding: 12px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    max-width: 90%;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    max-width: 60%;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    max-width: 45%;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    max-width: 38%;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    max-width: 31%;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  margin-right: 12px;
}

.emotion-2 svg {
  display: block;
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E3F54;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-3 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-3 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-3.emotion-3 {
  width: 24px;
  height: 24px;
}

.emotion-5 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  margin: 0;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  color: #FFFFFF;
}

.emotion-6::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-6::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-6 svg {
  fill: #FFFFFF;
}

<div
    class="emotion-0"
    data-testid="toast-container"
  >
    <div
      class="emotion-1"
    >
      <div
        aria-hidden="true"
        class="emotion-2"
      >
        <svg
          aria-hidden="true"
          class="emotion-3 emotion-4"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
          />
        </svg>
      </div>
      <div
        aria-live="polite"
        class="emotion-5"
        role="status"
      >
        <p
          class="emotion-6"
        >
          toast message
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast Component renders with logical props 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #2E3F54;
  border-radius: 8px;
  padding: 12px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-block: 50px;
  padding-inline: 30px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    max-width: 90%;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    max-width: 60%;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    max-width: 45%;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    max-width: 38%;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    max-width: 31%;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-3 {
  margin: 0;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  color: #FFFFFF;
}

.emotion-3::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-3::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-3 svg {
  fill: #FFFFFF;
}

<div
    class="emotion-0"
    data-testid="toast-container"
  >
    <div
      class="emotion-1"
    >
      <div
        aria-live="polite"
        class="emotion-2"
        role="status"
      >
        <p
          class="emotion-3"
        >
          toast message
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast Component renders with overrides and all props 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #fdda9b;
  border-radius: 2px;
  padding: 20px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 svg {
  fill: red;
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    max-width: 90%;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    max-width: 60%;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    max-width: 45%;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    max-width: 38%;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    max-width: 31%;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  margin-right: 16px;
}

.emotion-2 svg {
  display: block;
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E3F54;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-3 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-3 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-3.emotion-3 {
  width: 24px;
  height: 24px;
}

.emotion-5 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-right: 4px;
}

.emotion-6 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 18px;
  line-height: 20.25px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-bottom: 24px;
}

.emotion-6::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-6::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-7 {
  margin: 0;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-7::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-7::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-8 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin-right: 4px;
}

.emotion-9 {
  border-style: solid;
  border-color: #DEE2E5;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

.emotion-10 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-11 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  min-width: 64px;
  padding: 8px 12px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  margin: 0;
  cursor: pointer;
}

.emotion-11 svg {
  width: 16px;
  height: 16px;
}

.emotion-11 svg {
  fill: #FFFFFF;
}

.emotion-11:hover:not(:disabled) {
  background-color: #254CAC;
}

.emotion-11:active:not(:disabled) {
  background-color: #14328D;
}

.emotion-11:disabled {
  background-color: #DEE2E5;
  color: #C0C7CC;
}

.emotion-11:disabled svg {
  fill: #C0C7CC;
}

.emotion-11:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-11:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-11 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-11 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-14 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 18px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-14::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-14::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<div
    class="emotion-0"
    data-testid="toast-container"
  >
    <div
      class="emotion-1"
    >
      <div
        aria-hidden="true"
        class="emotion-2"
      >
        <svg
          aria-hidden="true"
          class="emotion-3 emotion-4"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
          />
        </svg>
      </div>
      <div
        aria-live="polite"
        class="emotion-5"
        role="status"
      >
        <p
          class="emotion-6"
        >
          Toast title
        </p>
        <p
          class="emotion-7"
        >
          toast message
        </p>
      </div>
    </div>
    <div
      class="emotion-8"
    >
      <hr
        aria-hidden="true"
        class="emotion-9"
        data-testid="divider"
      />
    </div>
    <div
      class="emotion-10"
    >
      <button
        class="emotion-11"
        data-testid="button"
        type="button"
      >
        <div
          class="emotion-12"
        >
          <div
            class="emotion-13"
          >
            <span
              class="emotion-14"
            >
              undo
            </span>
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast Component renders with title 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #2E3F54;
  border-radius: 8px;
  padding: 12px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    max-width: 90%;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    max-width: 60%;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    max-width: 45%;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    max-width: 38%;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    max-width: 31%;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-3 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 18px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
  color: #FFFFFF;
  margin-bottom: 4px;
}

.emotion-3::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-3::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-3 svg {
  fill: #FFFFFF;
}

.emotion-4 {
  margin: 0;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  color: #FFFFFF;
}

.emotion-4::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-4::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-4 svg {
  fill: #FFFFFF;
}

<div
    class="emotion-0"
    data-testid="toast-container"
  >
    <div
      class="emotion-1"
    >
      <div
        aria-live="polite"
        class="emotion-2"
        role="status"
      >
        <p
          class="emotion-3"
        >
          Toast title
        </p>
        <p
          class="emotion-4"
        >
          toast message
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
